--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,10 @@
 <h1>Editing Book</h1>
 
 <%= form_with model:@book, local:true do |f| %>
-　<h4>タイトル</h4>
+　<h4>Title</h4>
   <%= f.text_field :title %>
 
-  <h4>本文</h4>
+  <h4>Body</h4>
   <%= f.text_area :body %>
 
   <%= link_to "show", book_path(@book.id) %>
