--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,4 @@
+<%= flash[:notice] %>
 <p>
   <strong>Title:</strong><%= @book.title %>
 </p>
@@ -6,5 +7,5 @@
 </p>
 
 <%= link_to "Edit", edit_book_path(@book.id) %>
-
+|
 <%= link_to "Back", books_path %>
