--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,4 @@
+<p></p>
 <h1>Books</h1>
 <table>
     <thead>
@@ -23,12 +24,18 @@
 <h2>New book</h2>
 <%= form_with model:@book, local:true do |f| %>
 
-  <h4>タイトル</h4>
+ <div class="filed">
+  <div>Title</div>
   <%= f.text_field :title %>
+ </div>
 
-  <h4>本文</h4>
+ <div class="filed">
+  <div>Body</div>
   <%= f.text_area :body %>
+ </div>
 
+ <div class="actions">
   <%= f.submit 'Create Book' %>
+ </div>
 
 <% end %>
