--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,37 @@
  *= require_tree .
  *= require_self
  */
+
+* {
+  color: #333;
+}
+
+body {
+  margin: 33px;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  color: #333;
+}
+
+p {
+  margin: 33px;
+}
+
+th {
+  padding-bottom: 5px;
+}
+
+td {
+  padding-bottom: 7px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.filed {
+  margin-bottom: 10px;
+}
+
+.actions {
+  margin-bottom: 10px
+}
