--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,15 +1,22 @@
 <h1>Editing Book</h1>
-
 <%= form_with model:@book, local:true do |f| %>
-　<h4>Title</h4>
+
+ <div class="filed">
+　<div>Title</div>
   <%= f.text_field :title %>
+ </div>
 
-  <h4>Body</h4>
+ <div class="filed">
+  <div>Body</div>
   <%= f.text_area :body %>
+ </div>
 
-  <%= link_to "show", book_path(@book.id) %>
-
-　<%= link_to "Back", books_path %>
-
+ <div class="actions">
   <%= f.submit 'Update Book' %>
+ </div>
+
 <% end %>
+
+<%= link_to "show", book_path(@book.id) %>
+|
+<%= link_to "Back", books_path %>
